tests/negative_pomidory/SmokeTest4/NestedSmokeTestFolder/smoke_tests_inside_nested.pomidor

!!Used for test_pomidor_run_all_and_nested_dir!!
@Feature CSV_data1
@prereq google_search
@param delete_cookies, full_screen
@DATA pageObjects/csv_data_source2.csv
@url practice_page
@story CSV_Test_case!
!!Comment first line - First, click on login_field #practice_menu_button page title
and type <<FirstName>> in #name_field. Then, type [[some
free text]] in #name_field,
 and types <<City of
Birth>> in #name_field
and again and then type <<LastName>> in #name_field
!!and type [[Yo!]] in #name_field



